changed background to a image

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,11 @@
   <title>엄마 조리법</title>
 </head>
 
-<body>
+<body style="background: url(https://i.imgur.com/UgYQbYv.jpg) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
