--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>엄마 조리법</title>
 </head>
 
-<body style="background: url(https://i.imgur.com/UgYQbYv.jpg) no-repeat center center fixed; 
+<body style="background: url(https://i.imgur.com/gNcjsZc.jpg) no-repeat center center fixed; 
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
