--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>엄마 조리법</title>
+  <title>HaruHaru Recipe's</title>
 </head>
 
 <body style="background: url(https://i.imgur.com/gNcjsZc.jpg) no-repeat center center fixed; 
