--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,7 @@
   <title>HaruHaru Recipe's</title>
 </head>
 
-<body style="background: url(https://i.imgur.com/gNcjsZc.jpg) no-repeat center center fixed; 
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
